--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bulma/0.7.2/css/bulma.min.css">
     <title>React App</title>
   </head>
   <body>
