added the demos for env

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,14 @@
     -->
 
     <link rel="stylesheet" href="https://cdn.bootcss.com/bulma/0.7.2/css/bulma.min.css">
-    <title>React App</title>
+    <title>aicoder.com</title>
   </head>
   <body>
+    <img src="%PUBLIC_URL%/favicon.ico" alt="">
+    <hr>
+    <p>---%REACT_APP_AICODER%---</p>
+    <hr>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
